upgpkg: fanficfare 3.13.0-1: upstream release
git-svn-id: file:///srv/repos/svn-community/svn@531541 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/changelog.txt
+++ b/trunk/changelog.txt
@@ -1,3 +1,33 @@
+Version 3.13.0 - 15 Nov 2019
+- Add some code to handle 24 hr clocks w/o changing adapters.
+- Don't escape # in URLs, causes problems with ficbook.net.
+- Bypass expired SSL cert by not using SSL. adapter_thehookupzonenet
+- Bypass expired SSL cert by not using SSL. adapter_spikeluvercom
+- Remove site twilightarchives.com - Closed as per web site.
+- Remove site lotrfanfiction.com - Closed as per web site.
+- Remove site www.13hours.org. Moved to AO3.
+- Add site specific chapterslashtotal and chapterstotal for
+  adapter_archiveofourownorg.
+- Fixes for adapter_webnovelcom site changes to JSON.
+- Add parentforums site specific metadata for base_xenforo, include partial
+  list in category.
+- Add user/pass to adapter_fictionhuntcom, required to see chapter text now.
+- Discard cookie cache on library change--might use different users/settings.
+- At least one efiction site said Completed: Completed instead of Yes.
+- Adding some html class attrs to epub output for ease of CSS.
+- Add --no-output CLI option. Closes #443
+- Save cookiejar between downloads during same calibre session, including BG
+  jobs.
+- Avoid post URLs in XenForo notification emails for QQ & AH too.
+- Avoid post URLs in XenForo notification emails better w/o catching post in
+  thread title. Probably.
+- Fix for 404 error on XF always_login. Closes #438
+- Fix for CLI update fail on one story causing all subsequent to also skip
+  update. Issue #438
+- Avoid post URLs in XenForo notification emails better.
+- Treat spacebattles /post/ URLs in emails the same as sufficientvelocity to
+  avoid extra URLs in thread notifications.
+
 Version 3.12.0 - 14 Oct 2019
 - Update Translations
 - Add defaults.ini CSS for ficbook.net to preserve line breaks.
@@ -11,16 +41,3 @@ Version 3.12.0 - 14 Oct 2019
   email URLs.
 - New Russian Site added: www.swi.org.ru - Thanks gunmetal313
 - Fix for wordcount in adapter_fanfiktionde when max_zalgo:1
-
-Version 3.11.0 - 04 Sep 2019
-- Update Translations
-- Add URL prefix for XF2 authorUrl if relative. Circa Aug 23, 2019 SV changed
-  the author URL FFF collects to a relative link and I didn't notice it until
-  now.
-- Add dedup_chapter_list option for buggy chapter lists. Optional in case
-  they're not buggy.
-- Add fetch_last_page for base_xenforo--SB doesn't send notice emails if user
-  not up-to-date now.
-- Fix for corner-case with deleting Rejects.
-- Fix for XF1 regression caused by XF2 threadmarks metadata code.
-- Add XF2 threadmarks_cover/status/desc/title options.
